<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_map"
        android:title="Map" />
    <item
        android:id="@+id/menu_profile"
        android:title="Profile" />
</menu>
