<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="StartTime"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="EndTime"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvBuilding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Building"
            android:gravity="center" />

        <Button
            android:id="@+id/btnChangeCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change/Cancel" />

    </LinearLayout>